<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.bookmark.BookmarkNoteActivity">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="?actionBarSize"
                    android:background="@color/colorPrimary">
        <TextView android:id="@+id/tv_cancel"
                  android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:paddingStart="16dp"
                  android:paddingEnd="8dp"
                  android:textColor="@android:color/white"
                  android:textSize="15sp"
                  android:gravity="center_vertical"
                  android:text="@string/cancel"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:textSize="16sp"
                  android:layout_centerInParent="true"
                  android:text="@string/create_note"/>

        <TextView android:id="@+id/tv_ok"
                  android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:paddingStart="8dp"
                  android:paddingEnd="16dp"
                  android:layout_alignParentEnd="true"
                  android:textColor="@android:color/white"
                  android:textSize="15sp"
                  android:gravity="center_vertical"
                  android:text="@string/ok"/>
    </RelativeLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:padding="16dp"
              android:textColor="@android:color/black"
              android:textSize="16sp"
              android:text="@string/note"/>

    <EditText android:id="@+id/edt_note"
              android:padding="16dp"
              android:gravity="start"
              android:layout_width="match_parent" android:layout_height="match_parent"/>

</LinearLayout>