<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.register.RegisterActivity">

    <!--toolbar-->
    <RelativeLayout android:layout_width="match_parent" android:layout_height="?actionBarSize"
                    android:background="@color/colorPrimary">

        <TextView android:id="@+id/tv_cancel"
                  android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:text="@string/cancel"
                  android:gravity="center"
                  android:paddingStart="16dp"
                  android:textColor="@android:color/white"
                  android:paddingEnd="8dp"
                  android:layout_alignParentStart="true"
                  android:textSize="16sp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:gravity="center"
                  android:text="@string/register"
                  android:textColor="@android:color/white"
                  android:textSize="16sp"/>

    </RelativeLayout>
    <!--end Toolbar-->

    <!--body-->
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:padding="24dp"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/register"
                  android:textColor="@android:color/black"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="16dp"
                  android:textSize="20sp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/email"
                  android:textColor="@android:color/black"
                  android:layout_marginTop="16dp"
                  android:textSize="16sp"/>

        <EditText android:id="@+id/edt_email"
                  android:layout_width="match_parent" android:layout_height="48dp"
                  android:lines="1" android:gravity="start|center_vertical"
                  android:inputType="textEmailAddress"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/password"
                  android:textColor="@android:color/black"
                  android:layout_marginTop="16dp"
                  android:textSize="16sp"/>

        <EditText android:id="@+id/edt_password"
                  android:layout_width="match_parent" android:layout_height="48dp"
                  android:lines="1" android:gravity="start|center_vertical"
                  android:inputType="textPassword"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/confirm_password"
                  android:textColor="@android:color/black"
                  android:layout_marginTop="16dp"
                  android:textSize="16sp"/>

        <EditText android:id="@+id/edt_confirm_password"
                  android:layout_width="match_parent" android:layout_height="48dp"
                  android:lines="1" android:gravity="start|center_vertical"
                  android:inputType="textPassword"/>

        <Button android:id="@+id/btn_ok"
                android:layout_width="wrap_content" android:layout_height="48dp"
                android:text="@string/ok"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@color/colorBtnGreen"/>


        <TextView android:id="@+id/tv_login"
                  android:layout_width="wrap_content" android:layout_height="40dp"
                  android:gravity="center"
                  android:paddingStart="16dp"
                  android:paddingEnd="16dp"
                  android:textColor="@color/colorPrimaryDark"
                  android:textSize="16dp"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="16dp"
                  android:text="@string/registered_login"/>
    </LinearLayout>
</LinearLayout>